# ai_code_review_api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: db.py  db_models.py  main.py
app/api/routes/: admin.py  review.py
app/core/: config.py  rate_limit.py  security.py
app/models/: admin.py  review.py
app/services/: auth_service.py
app/services/llm/: anthropic_service.py  base.py  factory.py  gemini_service.py  openai_service.py
app/utils/: errors.py  exceptions.py  parsing.py  prompts.py
tests/: conftest.py  test_admin_api.py  test_error_handling.py  test_health_api.py  test_review_api.py
